--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://sreedharperim.github.io/vitclass/",
+  "homepage": "https://sreedharperim.github.io/vit-classroom/",
   "name": "gclass-frontend",
   "version": "1.0.0",
   "private": true,
